opam-version: "2.0"
version: "git"
authors: "Ahrefs Pte Ltd <github@ahrefs.com>"
maintainer: "Ahrefs Pte Ltd <github@ahrefs.com>"
homepage: "https://github.com/ahrefs/passage"
bug-reports: "https://github.com/ahrefs/passage/issues"
dev-repo: "git+ssh://git@github.com/ahrefs/passage"

synopsis: "Passage - used to store and manage access to shared secrets"

depends: [
  "cmdliner"
  "devkit"
  "extunix"
  "fileutils"
  "fpath"
  "lwt"
  "lwt_ppx"
  "menhir"
  "ppx_expect"
  "qrc"
  "re2"
  "sedlex"
  "ocamlformat" {= "0.26.2" & with-dev-setup}
]

depexts: [
  ["age"] {os-family = "debian"}
]
