opam-version: "2.0"
version: "0.3.5"
synopsis: "Passage - used to store and manage access to shared secrets"
description: "Passage - used to store and manage access to shared secrets"
maintainer: ["Ahrefs Pte Ltd <github@ahrefs.com>"]
authors: ["Ahrefs Pte Ltd <github@ahrefs.com>"]
license: "MIT"
homepage: "https://github.com/ahrefs/passage"
bug-reports: "https://github.com/ahrefs/passage/issues"
depends: [
  "bos"
  "cmdliner" {>= "2.0.0"}
  "ocaml" {>= "4.14"}
  "conf-age"
  "dune" {>= "3.9"}
  "fileutils"
  "fpath"
  "menhir" {>= "20231231"}
  "ppx_expect" {with-test}
  "qcheck-core" {with-test}
  "bisect_ppx" {with-dev-setup & = "~dev"}
  # ppxlib >= 0.35.0 is not compatible with our version of bisect_ppx.
  "ppxlib" {with-dev-setup & <= "0.35.0"}
  "ocamlformat" {with-dev-setup & = "0.28.1"}
  "qrc"
  "re" {>= "1.14.0"}
  "sedlex"
  "odoc" {with-doc}
]
dev-repo: "git+https://github.com/ahrefs/passage.git"
build: [
  ["dune" "subst"] {dev}
  [
    "dune"
    "build"
    "-p"
    name
    "-j"
    jobs
    "@install"
    "@doc" {with-doc}
  ]
]
available: os != "win32"
x-maintenance-intent: ["(latest)"]
# Since the latest release of bisect_ppx, 2.8.3, is not compatible with cmdliner.
pin-depends: ["bisect_ppx.~dev" "https://github.com/aantron/bisect_ppx/archive/2d8dffbbfc0c431a37319d4d9a143836c9ec542e.zip"]
