(library
 (name passage_test)
 (modules :standard \ template_qcheck_test)
 (libraries
  base
  passage
  ppx_expect
  ppx_expect.config
  ppx_expect.config_types)
 (inline_tests)
 (instrumentation
  (backend bisect_ppx))
 (preprocess
  (pps ppx_expect)))

(test
 (name template_qcheck_test)
 (modules template_qcheck_test)
 (libraries passage qcheck-core qcheck-core.runner))
